# gen_eco_networks

./: .gitignore  README.md  pyproject.toml
example_networks/niche_model/: edges.txt  graph.gml  graph.pkl  nodes.txt
example_networks/pnm/: attributes.txt  edges.txt  graph.gml  graph.pkl
example_networks/rgg/: attributes.txt  edges.txt  graph.gml  graph.pkl
example_networks/sbm/: attributes.txt  edges.txt  graph.gml  graph.pkl
notebooks/: demo_models.ipynb  demo_niche_model.ipynb
src/ecological_networks/: base.py
src/ecological_networks/models/: __init__.py  niche.py
src/gen_eco_networks/: base.py
src/gen_eco_networks/models/: __init__.py  niche.py  probabilistic_niche.py  rgg.py  sbm.py
src/gen_eco_networks/utils/: __init__.py  plot.py
