[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gen_eco_networks"
version = "0.1.0"
description = "A package for generating synthetic ecological networks."
authors = [
    {name = "Vivian Li", email = "vivian.li@colorado.edu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "pandas>=2.2.3",
]

[project.optional-dependencies]
dev = [
    "scipy>=1.17.0",
    "matplotlib>=3.10.8",
    "ipykernel>=7.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Homepage" = "https://github.com/vivian-m-li/synthetic-ecological-networks"